--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -114,11 +114,123 @@
 
 ### 丢失更新
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction08.PNG)
-* 悲观锁
+* **悲观锁**
 > 可以在查询的时候，加入 for update
 
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction09.PNG)
-* 乐观锁
+* **乐观锁**
 > 需要程序员自己控制
 
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction10.PNG)
+
+## 数据库连接池
+> 一开始先在内存中开辟一块空间（集合），一开始先网池子里放置多个连接对象。当需要连接的时候，直接俄从池子里取，使用完毕后，归还连接，确保连接对象能循环利用。
+![icon](https://github.com/WuDeluan/Notes/blob/master/picture/poor01.PNG)
+### 自定义连接池
+### 开源连接池
+#### DBCP
+
+**1.导入jar文件 ** `commons-dbcp.jar` `commons-pool.jar`
+**2.不使用配置文件**<br>
+```java
+@Test
+	public void testJDBC() {
+			
+		Connection conn = null;
+		PreparedStatement ps = null;
+		try {					
+			//1.构建数据库连接对象
+			BasicDataSource dataSource = new BasicDataSource();
+			
+			/*
+			 * 连接数据库类型，访问的数据库、用户名、密码
+			 * jdbc:mysql://localhost/test   主协议：子协议：// 本地 /数据库
+			 */
+			dataSource.setDriverClassName("com.mysql.jdbc.Driver");
+			dataSource.setUrl("jdbc:mysql://localhost:3306/test");
+			dataSource.setUsername("root");
+			dataSource.setPassword("root");
+			
+			//2.得到连接对象
+			conn = dataSource.getConnection();
+			String sql = "insert into account value(3,?,?)";
+			ps = conn.prepareStatement(sql);
+			ps.setString(1, "wangwu");
+			ps.setInt(2, 1000);
+			
+			ps.executeUpdate();
+		} catch (SQLException e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}	
+      }	
+```
+**3.使用配置文件**
+* 配置文件dbcpconfig.properties
+```java
+#连接设置
+driverClassName=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost/test
+username=root
+password=
+
+#<!-- 初始化连接 -->
+initialSize=10
+
+#最大连接数量
+maxActive=50
+
+#<!-- 最大空闲连接 -->
+maxIdle=20
+
+#<!-- 最小空闲连接 -->
+minIdle=5
+
+#<!-- 超时等待时间以毫秒为单位 6000毫秒/1000等于60秒 -->
+maxWait=60000
+
+
+#JDBC驱动建立连接时附带的连接属性属性的格式必须为这样：[属性名=property;] 
+#注意："user" 与 "password" 两个属性会被明确地传递，因此这里不需要包含他们。
+connectionProperties=useUnicode=true;characterEncoding=utf8
+
+#指定由连接池所创建的连接的自动提交（auto-commit）状态。
+defaultAutoCommit=true
+
+#driver default 指定由连接池所创建的连接的只读（read-only）状态。
+#如果没有设置该值，则“setReadOnly”方法将不被调用。（某些驱动并不支持只读模式，如：Informix）
+defaultReadOnly=
+
+#driver default 指定由连接池所创建的连接的事务级别（TransactionIsolation）。
+#可用值为下列之一：（详情可见javadoc。）NONE,READ_UNCOMMITTED, READ_COMMITTED, REPEATABLE_READ, SERIALIZABLE
+defaultTransactionIsolation=REPEATABLE_READ
+
+```
+* 连接数据库
+```java
+@Test
+	public void testJDBC() {
+
+		Connection conn = null;
+		PreparedStatement ps = null;
+		try {
+			BasicDataSourceFactory factory = new BasicDataSourceFactory();
+			Properties properties = new Properties();
+			InputStream is;
+			is = new FileInputStream("src//dbcpconfig.properties");
+			properties.load(is);
+			DataSource dataSource = factory.createDataSource(properties);
+
+			// 2.得到连接对象
+			conn = dataSource.getConnection();
+			String sql = "insert into account value(4,?,?)";
+			ps = conn.prepareStatement(sql);
+			ps.setString(1, "zhaoliu");
+			ps.setInt(2, 1000);
+
+			ps.executeUpdate();
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+```
