--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -75,11 +75,11 @@
 
 ### 事务的安全隐患
 > 不考虑隔离级别的设置，那么会出现以下问题：
-* 读
+* **读**
     * 脏读`一个事务读到另一个事务还没提交的数据`
     * 不可重复读`一个事务读到了另一个事务提交的数据，造成了前后两次查询结果`
     * 幻读`一个事务读到另一个事务insert的数据，造成前后查询结果的不一致`
-* 写
+* **写**
     * 丢失更新
 ### 隔离级别
 > mysql默认的隔离级别是 可重复读
@@ -130,7 +130,7 @@
 ### 开源连接池
 #### DBCP
 
-**1.导入jar文件 ** `commons-dbcp.jar` `commons-pool.jar`
+**1.导入jar文件** `commons-dbcp.jar` `commons-pool.jar`<br>
 **2.不使用配置文件**<br>
 ```java
 @Test
@@ -233,4 +233,87 @@ defaultTransactionIsolation=REPEATABLE_READ
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
+```
+#### C3P0
+**1.导入jar文件** `c3p0-0.9.1.2.jar`<br>
+**2.不使用配置文件**<br>
+```java
+@Test
+	public void testJDBC() {
+
+		Connection conn = null;
+		PreparedStatement ps = null;
+		try {
+			//1.创建dataSource
+			ComboPooledDataSource dataSource = new ComboPooledDataSource();
+			//2.设置来捏数据的信息
+			dataSource.setDriverClass("com.mysql.jdbc.Driver");
+			dataSource.setJdbcUrl("jdbc:mysql://localhost/test");
+			dataSource.setUser("root");
+			dataSource.setPassword("root");
+
+			// 2.得到连接对象
+			conn = dataSource.getConnection();
+			String sql = "insert into account value(5,?,?)";
+			ps = conn.prepareStatement(sql);
+			ps.setString(1, "hhhhh");
+			ps.setInt(2, 400);
+
+			ps.executeUpdate();
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+	}
+```
+**3.使用配置文件**
+* 配置文件`c3p0-config.xml`，放在classpath中，或classes目录中（放在工程的src文件下即可）
+```xml
+	<?xml version="1.0" encoding="UTF-8"?>
+	<c3p0-config>
+	  <default-config>
+	    <property name="driverClass">com.mysql.jdbc.Driver</property>
+	    <property name="jdbcUrl">jdbc:mysql://localhost:3306/test</property>
+	    <property name="user">root</property>
+	    <property name="password">root</property>
+
+	    <property name="initialPoolSize">10</property>
+	    <property name="maxIdleTime">30</property>
+	    <property name="maxPoolSize">100</property>
+	    <property name="minPoolSize">10</property>
+	    <property name="maxStatements">200</property>
+
+	    <user-overrides user="test-user">
+	      <property name="maxPoolSize">10</property>
+	      <property name="minPoolSize">1</property>
+	      <property name="maxStatements">0</property>
+	    </user-overrides>
+	  </default-config>
+	</c3p0-config>
+```
+* 创建连接
+```java
+@Test
+	public void testJDBC() {
+
+		Connection conn = null;
+		PreparedStatement ps = null;
+		try {
+			//1.创建dataSource
+			//默认会找配置文件c3p0-config.xml中的default-config分支
+			ComboPooledDataSource dataSource = new ComboPooledDataSource();
+
+			// 2.得到连接对象
+			conn = dataSource.getConnection();
+			String sql = "insert into account value(6,?,?)";
+			ps = conn.prepareStatement(sql);
+			ps.setString(1, "wwww");
+			ps.setInt(2, 400);
+
+			ps.executeUpdate();
+		} catch (Exception e) {
+			// TODO Auto-generated catch block
+			e.printStackTrace();
+		}
+	}
 ```
