--- a/Javaweb/6.JSP&El&JSTL.md
+++ b/Javaweb/6.JSP&El&JSTL.md
@@ -234,7 +234,9 @@
 > 讲话jsp的代码编写，使用taglib指令来引入标签库
 
 ### JSTL的使用
-1. 导入jar文件到工程的WebContent/Web-Inf/lib  jstl.jar standar.jar
+1. 导入jar文件到工程的WebContent/Web-Inf/lib  
+* jstl.jar 
+* standar.jar
 2.在jsp页面上，使用taglib指令
 ```jsp
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
