--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -130,7 +130,9 @@
 ### 开源连接池
 #### DBCP
 
-**1.导入jar文件** `commons-dbcp.jar` `commons-pool.jar`<br>
+**1.导入jar文件** 
+* `commons-dbcp.jar` 
+* `commons-pool.jar`<br>
 **2.不使用配置文件**<br>
 ```java
 @Test
@@ -235,7 +237,8 @@ defaultTransactionIsolation=REPEATABLE_READ
 		}
 ```
 #### C3P0
-**1.导入jar文件** `c3p0-0.9.1.2.jar`<br>
+**1.导入jar文件** 
+* `c3p0-0.9.1.2.jar`<br>
 **2.不使用配置文件**<br>
 ```java
 @Test
@@ -317,3 +320,77 @@ defaultTransactionIsolation=REPEATABLE_READ
 		}
 	}
 ```
+## DBUtil
+### 基本用法
+#### **1.增删改**
+``` java
+		//dbUtils:只是帮助简化了CRUD的代码，但是连接的创建以及获取工作，不在作用范围内
+		
+		//创建连接
+		QueryRunner queryRunner = new QueryRunner(new ComboPooledDataSource());
+		
+		//update(): 更新，包括插入、删除、修改
+		//插入
+		queryRunner.update("insert into account values(6,?,?)", "aa",2333);
+		
+		//删除
+		queryRunner.update("delete from account where id = ?", 6);
+		
+		//修改
+		queryRunner.update("update account set money = ? where id = 1", 1);
+```
+#### **2.查询**
+* 直接new接口的匿名实现类
+```java
+               //query(): 查询,去执行查询，查询到的数据还是在那个result里面，然后调用下面的handle方法，有用户去封装
+		Account account = queryRunner.query("select * from account where id = ?", new ResultSetHandler<Account>(){
+			       public Account handle(ResultSet rs) throws SQLException {
+				     Account account = new Account();
+				     while(rs.next()) {
+				    	 int id = rs.getInt("id");
+				    	 String name = rs.getString("name");
+				    	 int money = rs.getInt("money");
+				    	 
+				    	 account.setId(id);
+				    	 account.setName(name);
+				    	 account.setMoney(money);
+				     }
+				     return account;
+			}
+		},1);
+```
+* 直接使用框架中的实现类
+    * 查询单个对象
+    ```java
+    		/*
+		 * 通过字节码得到该类的实例
+		 * Account a = new Account();
+		 * 
+		 * Account a2 = Account.class.newInstance();
+		 */
+		//查询单个对象
+		Account account2 = queryRunner.query("select * from account where id = ?", new BeanHandler<Account>(Account.class),2);
+		//打印内容
+		System.out.println(account2.toString());
+	```
+	* 查询多个对象
+	```java
+		//查询对象集合
+		List<Account> list = queryRunner.query("select * from account",new BeanListHandler<Account>(Account.class));
+		//打印内容
+		for(Account account3: list) {
+			System.out.println(account3.toString());
+	```
+### 常用实现类
+* BeanHeadler : 查询到的单个数据封装成一个对象
+* BeanListHandler : 查询到的单个数据封装成一个List<对象>
+
+* ArrayHandler : 查询到的单个数据封装成一个数组
+* ArrayListHandler : 查询到的单个数据封装成一个集合，集合里面的元素是数组
+
+* MapHandler : 查询到的单个数据封装成一个map
+* MapListHandler : 查询到的单个数据封装成一个集合，集合里面的元素是map
+
+* ColumnListHandler
+* KeyedHandler
+* ScalarHandler
