--- a/Javaweb/7.事务&数据库连接池&DBUtil.md
+++ b/Javaweb/7.事务&数据库连接池&DBUtil.md
@@ -124,7 +124,8 @@
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/transaction10.PNG)
 
 ## 数据库连接池
-> 一开始先在内存中开辟一块空间（集合），一开始先网池子里放置多个连接对象。当需要连接的时候，直接俄从池子里取，使用完毕后，归还连接，确保连接对象能循环利用。
+> 一开始先在内存中开辟一块空间（集合），一开始先网池子里放置多个连接对象。当需要连接的时候，直接俄从池子里取，使用完毕后，归还连接，确保连接对象能循环利用。<br>
+
 ![icon](https://github.com/WuDeluan/Notes/blob/master/picture/poor01.PNG)
 ### 自定义连接池
 ### 开源连接池
