--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -107,3 +107,121 @@ CREATE TABLE `stu` (
 * 6.在list。jsp上显示数据
 > 使用EL + JSTL + 表格
 
+## 增加
+* 1.先跳转到增加的页面，编写增加的页面
+```jsp
+	<tr>
+		<td colspan="8">
+			<a href="add.jsp">添加</a>
+		</td>
+	</tr>
+```
+```jsp
+        <!--     注意对表单form的填写   -->
+	<form method="post" action="AddStudentServlet">
+	   <tr>
+		<td colspan="2"><input type="submit" value="添加"></td>
+	  </tr> 
+	</form>
+```
+* 2.点击添加，提交数据到servlet，处理数据
+```java
+	public class AddStudentServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+			try {
+				request.setCharacterEncoding("UTF-8");
+
+				//获取学生信息
+				String sname = request.getParameter("sname");
+				String gender = request.getParameter("gender");
+				String phone = request.getParameter("phone");			
+				String birthday = request.getParameter("birthday");
+				String info = request.getParameter("info");
+
+				//获取爱好
+				String [] h = request.getParameterValues("hobby"); //获取爱好数组
+				String hobby = Arrays.toString(h); //转成string,格式将变为[篮球，游泳 ...]
+				hobby = hobby.substring(1,hobby.length()-1); //去除两端的中括号	
+				
+				
+				//2.添加到数据库
+				//string --> Date
+				Date date = new SimpleDateFormat("yyyy-MM-dd").parse(birthday);
+
+				Student student = new Student(sname,gender,phone,date,hobby,info); 
+				StudentService service = new StudentServiceImpl();
+				service.insert(student);
+
+				//3.跳转到列表页
+				//在查一次数据库，装到作用域中，再跳转
+				//这里是直接跳转到页面上，那么这个页面会重新翻译一次，上面那个request的请求存放的数据就没有了
+				//request.getRequestDispatcher("list.jsp").forward(request, response);
+
+				//sevlet除了能跳转jsp之外，还能跳转到servlet
+				request.getRequestDispatcher("StudentListServlet").forward(request, response);
+
+			} catch (Exception e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+		}
+
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			doGet(request, response);
+		}
+
+	}
+```
+* 3.调用service
+```java
+       public interface StudentService {
+	 /**
+	  * 添加学生
+	  * @param student 需要添加到数据库的学生对象 
+	  * @throws SQLException
+	  */
+	 void insert(Student student) throws SQLException;
+   }
+```
+```java
+	public class StudentServiceImpl implements StudentService{
+	 @Override
+	 public void insert(Student student) throws SQLException {
+		StudentDao dao = new StudentDaoImpl();
+		dao.insert(student);
+	}	 
+  }
+```
+* 4.调用Dao，完成数据持久化，即保存到数据库
+```java
+	public interface StudentDao {
+	 /**
+	 * 添加学生
+	 * @param student 需要添加到数据库的学生对象 
+	 * @throws SQLException
+	 */
+	void insert(Student student) throws SQLException;
+}
+```
+```java
+	public class StudentDaoImpl implements StudentDao{ 
+	@Override
+	public void insert(Student student) throws SQLException {
+		QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+		runner.update("insert into stu values(null,?,?,?,?,?,?)", 
+				student.getSname(),
+				student.getGender(),
+				student.getPhone(),
+				student.getBirthday(),
+				student.getHobby(),
+				student.getInfo() 
+				);
+	}
+}
+```
+* 5.完成存储工作后，跳转更新后的页面
+```java
+	request.getRequestDispatcher("StudentListServlet").forward(request, response);
+```
