--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -225,3 +225,8 @@ CREATE TABLE `stu` (
 ```java
 	request.getRequestDispatcher("StudentListServlet").forward(request, response);
 ```
+## 删除
+* 1.点击超链接，弹出一个确认删除的对话框，如果点击了确定，就删除
+* 2.让超链接执行一个js方法
+* 3.在js访问里面判断点击的选项，然后跳转到servlet
+* 4.servlet收到了请求，然后去调用service，service去调用dao
