--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -227,6 +227,86 @@ CREATE TABLE `stu` (
 ```
 ## 删除
 * 1.点击超链接，弹出一个确认删除的对话框，如果点击了确定，就删除
+```jsp
+	<td><a href="#" onclick="doDelete(${stu.sid})">删除</a></td>
+```
 * 2.让超链接执行一个js方法
+```jsp
+	<script type="text/javascript">
+		function doDelete(sid){
+		//弹出对话框，如果用户点击确定，就请求servlet
+		var flag=confirm("是否确定删除?");
+		if(flag){
+			//点了确定，访问servlet，在当前页面打开超链接，并传入id
+			location.href="DeleteStudentServlet?sid="+sid;				
+		}
+	}
+	</script>
+```
 * 3.在js访问里面判断点击的选项，然后跳转到servlet
+```java
+DelteStudentServlet
+
+	public class DeleteStudentServlet extends HttpServlet {
+
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			try { 
+				//1.接收id
+				int sid = Integer.parseInt(request.getParameter("sid"));
+				System.out.println(sid);
+				//2.执行删除
+				StudentService service = new StudentServiceImpl();
+				service.delete(sid);
+
+				//3.跳转页面
+				request.getRequestDispatcher("StudentListServlet").forward(request, response);;
+			} catch (SQLException e) {
+				e.printStackTrace();
+			}
+		}
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			doGet(request, response);
+	}
+}
+```
 * 4.servlet收到了请求，然后去调用service，service去调用dao
+```java
+StudentDao
+
+	/**
+	 * 根据id删除学生
+	 * @param sid
+	 * @throws SQLException
+	 */
+	void delete(int sid) throws SQLException;	
+```
+```java
+StudentDaoImpl
+
+	@Override
+	public void delete(int sid) throws SQLException {
+		QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+		runner.update("delete from stu where sid=?",sid);
+	}
+```
+```java
+StudentService
+
+	 /**
+	  * 根据id删除学生
+	 * @param sid
+	 * @throws SQLException
+	 */
+	void delete(int sid) throws SQLException;
+```
+```java
+StudentServiceIpl
+
+	@Override
+	public void delete(int sid) throws SQLException {
+		StudentDao dao = new StudentDaoImpl();
+		dao.delete(sid);
+	}
+```
+```java
