--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -28,6 +28,8 @@ CREATE TABLE `stu` (
 ## 查询
 * 1.先写一个jsp页面，里面放一个超链接
 ```jsp
+index.jsp
+
   <h3><a href="StudentListServlet">显示所有学生列表</a></h3>
 ```
 * 2.写Servlet接受请求，去调用Service，由service调用Dao<br>
@@ -41,8 +43,7 @@ CREATE TABLE `stu` (
        */
       List<Student> findAll() throws SQLException;
       }
-```
-```java
+
     public class StudentDaoImpl implements StudentDao{ 
 
       @Override
@@ -65,8 +66,7 @@ CREATE TABLE `stu` (
        */
        List<Student> findAll() throws SQLException;
        }
-```
-```java
+
     public class StudentServiceImpl implements StudentService{
 
 	@Override
@@ -177,49 +177,47 @@ CREATE TABLE `stu` (
 * 3.调用service
 ```java
        public interface StudentService {
-	 /**
-	  * 添加学生
-	  * @param student 需要添加到数据库的学生对象 
-	  * @throws SQLException
-	  */
-	 void insert(Student student) throws SQLException;
-   }
-```
-```java
+		 /**
+		  * 添加学生
+		  * @param student 需要添加到数据库的学生对象 
+		  * @throws SQLException
+		  */
+		 void insert(Student student) throws SQLException;
+   	}
+
 	public class StudentServiceImpl implements StudentService{
-	 @Override
-	 public void insert(Student student) throws SQLException {
-		StudentDao dao = new StudentDaoImpl();
-		dao.insert(student);
-	}	 
-  }
+		 @Override
+		 public void insert(Student student) throws SQLException {
+			StudentDao dao = new StudentDaoImpl();
+			dao.insert(student);
+		}	 
+        }
 ```
 * 4.调用Dao，完成数据持久化，即保存到数据库
 ```java
 	public interface StudentDao {
-	 /**
-	 * 添加学生
-	 * @param student 需要添加到数据库的学生对象 
-	 * @throws SQLException
-	 */
-	void insert(Student student) throws SQLException;
-}
-```
-```java
-	public class StudentDaoImpl implements StudentDao{ 
-	@Override
-	public void insert(Student student) throws SQLException {
-		QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
-		runner.update("insert into stu values(null,?,?,?,?,?,?)", 
-				student.getSname(),
-				student.getGender(),
-				student.getPhone(),
-				student.getBirthday(),
-				student.getHobby(),
-				student.getInfo() 
-				);
+		 /**
+		 * 添加学生
+		 * @param student 需要添加到数据库的学生对象 
+		 * @throws SQLException
+		 */
+		void insert(Student student) throws SQLException;
 	}
-}
+
+	public class StudentDaoImpl implements StudentDao{ 
+		@Override
+		public void insert(Student student) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			runner.update("insert into stu values(null,?,?,?,?,?,?)", 
+					student.getSname(),
+					student.getGender(),
+					student.getPhone(),
+					student.getBirthday(),
+					student.getHobby(),
+					student.getInfo() 
+					);
+		}
+	}
 ```
 * 5.完成存储工作后，跳转更新后的页面
 ```java
@@ -228,10 +226,14 @@ CREATE TABLE `stu` (
 ## 删除
 * 1.点击超链接，弹出一个确认删除的对话框，如果点击了确定，就删除
 ```jsp
+list.jsp
+
 	<td><a href="#" onclick="doDelete(${stu.sid})">删除</a></td>
 ```
 * 2.让超链接执行一个js方法
 ```jsp
+list.jsp
+
 	<script type="text/javascript">
 		function doDelete(sid){
 		//弹出对话框，如果用户点击确定，就请求servlet
@@ -245,8 +247,6 @@ CREATE TABLE `stu` (
 ```
 * 3.在js访问里面判断点击的选项，然后跳转到servlet
 ```java
-DelteStudentServlet
-
 	public class DeleteStudentServlet extends HttpServlet {
 
 		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
@@ -272,41 +272,266 @@ DelteStudentServlet
 ```
 * 4.servlet收到了请求，然后去调用service，service去调用dao
 ```java
-StudentDao
+	public interface StudentDao {
+		/**
+		 * 根据id删除学生
+		 * @param sid
+		 * @throws SQLException
+		 */
+		void delete(int sid) throws SQLException;
+	}
 
-	/**
-	 * 根据id删除学生
-	 * @param sid
-	 * @throws SQLException
-	 */
-	void delete(int sid) throws SQLException;	
+	public class StudentDaoImpl implements StudentDao{ 
+		@Override
+		public void delete(int sid) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			runner.update("delete from stu where sid=?",sid);
+		}
+	}
+
+	public interface StudentService {
+		 /**
+		  * 根据id删除学生
+		 * @param sid
+		 * @throws SQLException
+		 */
+		void delete(int sid) throws SQLException;
+	}
+
+	public class StudentServiceImpl implements StudentService{
+		@Override
+		public void delete(int sid) throws SQLException {
+			StudentDao dao = new StudentDaoImpl();
+			dao.delete(sid);
+		}
+	}
+```
+## 更新
+1.点击列表上的更新，先跳转到一个EditStudentServlet,查询该学生的所有信息
+```jsp
+list.jsp
+
+  <-- 在这个servlet里面，先根据id去查询这个学生的所有信息出来 -->
+  <td><a href="EditStudentServlet?sid=${stu.sid }">更新</a></td>
 ```
 ```java
-StudentDaoImpl
+	public interface StudentDao {
+		/**
+		 * 根据id查询学生信息
+		 * @param sid
+		 * @throws SQLException
+		 */
+		Student findStudentById(int sid) throws SQLException;
+	}
 
-	@Override
-	public void delete(int sid) throws SQLException {
-		QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
-		runner.update("delete from stu where sid=?",sid);
+	public class StudentDaoImpl implements StudentDao{
+		@Override
+		public Student findStudentById(int sid) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			return runner.query("select * from stu where sid=?",new BeanHandler<Student>(Student.class), sid);
+		}
+	}
+
+	public interface StudentService {
+		/**
+		 * 根据id查询单个学生信息
+		 * @param sid
+		 * @return student
+		 * @throws SQLException
+		 */
+		Student findStudentById(int sid) throws SQLException;
+	}
+
+	public class StudentServiceImpl implements StudentService{
+		@Override
+		public Student findStudentById(int sid) throws SQLException {
+			StudentDao dao = new StudentDaoImpl();
+			return dao.findStudentById(sid);
+		}
+	}
+
+	public class EditStudentServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+			try {
+				//1.获取待修改的学生id
+				int sid = Integer.parseInt(request.getParameter("sid"));
+
+				//2.根据id获取学生对象
+				StudentService service = new StudentServiceImpl();
+				Student student = service.findStudentById(sid);
+
+				//3，显示数据
+				//存数据
+				request.setAttribute("student", student);
+				//跳转页面
+				request.getRequestDispatcher("edit.jsp").forward(request, response);;
+
+
+			} catch (SQLException e) {
+				e.printStackTrace();
+			}
+		}
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {		
+			doGet(request, response);
+		}
 	}
 ```
 ```java
-StudentService
+	public class EditStudentServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
 
-	 /**
-	  * 根据id删除学生
-	 * @param sid
-	 * @throws SQLException
-	 */
-	void delete(int sid) throws SQLException;
-```
-```java
-StudentServiceIpl
+			try {
+				//1.获取待修改的学生id
+				int sid = Integer.parseInt(request.getParameter("sid"));
 
-	@Override
-	public void delete(int sid) throws SQLException {
-		StudentDao dao = new StudentDaoImpl();
-		dao.delete(sid);
+				//2.根据id获取学生对象
+				StudentService service = new StudentServiceImpl();
+				Student student = service.findStudentById(sid);
+
+				//3，显示数据
+				//存数据
+				request.setAttribute("student", student);
+				//跳转页面
+				request.getRequestDispatcher("edit.jsp").forward(request, response);;
+
+
+			} catch (SQLException e) {
+				e.printStackTrace();
+			}
+		}
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {		
+			doGet(request, response);
+		}
 	}
 ```
+2.跳转到更新的页面，然后再页面上显示数据
+```jsp
+edit.jsp
+
+	<-- 创建一个隐藏的输入框，再里面给定id的值 -->
+	<input type="hidden" name="sid" value="${student.sid }">
+
+	<-- 宏定义 -->
+	<%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+	<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
+
+	<-- 文本类型数据的获取 -->
+	<tr>
+		<td>姓名</td>
+		<td><input type="text" name="sname" value="${student.sname }"></td>
+	</tr>
+
+	<-- 单选框数据的获取 -->
+	 <tr>
+		<td>性别</td>
+		<td>
+			<!-- 	servlet中设置的属性名为student -->
+			<input type="radio" name="gender" value="男"<c:if test="${student.gender == '男' }">checked</c:if>>男
+			<input type="radio" name="gender" value="女"<c:if test="${student.gender == '女' }">checked</c:if>>女
+		</td>
+	</tr>
+
+	<-- 复选框数据的获取 -->
+	<tr> 
+		<td>爱好</td>
+		<td>
+			<!-- 因为爱好有很多个，里面有包含的关系 -->
+			<input type="checkbox" name="hobby" value="游泳"<c:if test="${fn:contains(student.hobby,'游泳') }">checked</c:if>>游泳
+			<input type="checkbox" name="hobby" value="篮球"<c:if test="${fn:contains(student.hobby,'篮球') }">checked</c:if>>篮球
+			<input type="checkbox" name="hobby" value="足球"<c:if test="${fn:contains(student.hobby,'足球') }">checked</c:if>>足球
+			<input type="checkbox" name="hobby" value="看书"<c:if test="${fn:contains(student.hobby,'看书') }">checked</c:if>>看书
+			<input type="checkbox" name="hobby" value="写字"<c:if test="${fn:contains(student.hobby,'写字') }">checked</c:if>>写字
+		</td>
+	</tr>
+```
+3.修改完毕后，提交数据到UpdateServlet,获取数据，调用servlet，调用dao
 ```java
+	public interface StudentDao {
+		/**
+		 * 根据id更新学生的信息
+		 * @param sid
+		 * @throws SQLException
+		 */
+		void update(Student student) throws SQLException;
+	}
+
+	public class StudentDaoImpl implements StudentDao{ 
+	@Override
+		public void update(Student student) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			runner.update("update stu set sname=?,gender=?,phone=?,birthday=?,hobby=?,info=? where sid=?",
+					student.getSname(),
+					student.getGender(),
+					student.getPhone(),
+					student.getBirthday(),
+					student.getHobby(),
+					student.getInfo(),
+					student.getSid());	
+		}
+	}
+	
+	public interface StudentService {
+		/**
+		 * 根据id更新学生信息
+		 * @param sid
+		 * @throws SQLException
+		 */
+		void update(Student student) throws SQLException;
+	}
+
+	public class StudentServiceImpl implements StudentService{
+		@Override
+		public void update(Student student) throws SQLException {
+			StudentDao dao = new StudentDaoImpl();
+			dao.update(student);	
+		}
+	}	
+	
+	public class UpdateStudentServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			try {
+
+				request.setCharacterEncoding("UTF-8");
+
+				//获取学生信息
+				int sid = Integer.parseInt(request.getParameter("sid"));
+				String sname = request.getParameter("sname");
+				String gender = request.getParameter("gender");
+				String phone = request.getParameter("phone");			
+				String birthday = request.getParameter("birthday");
+				//String hobby = request.getParameter("hobby");
+				String [] h = request.getParameterValues("hobby"); //获取爱好数组
+				String hobby = Arrays.toString(h); //转成string
+				hobby = hobby.substring(1,hobby.length()-1); //去除两端的中括号			
+				String info = request.getParameter("info");
+
+				//2.更新到数据库
+				//string --> Date
+				Date date = new SimpleDateFormat("yyyy-MM-dd").parse(birthday);
+
+				Student student = new Student(sid,sname,gender,phone,date,hobby,info); 
+				StudentService service = new StudentServiceImpl();
+				service.update(student);
+
+				//3.跳转到列表页
+				request.getRequestDispatcher("StudentListServlet").forward(request, response);
+
+			} catch (Exception e) {
+				// TODO Auto-generated catch block
+				e.printStackTrace();
+			}
+		}
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			doGet(request, response);
+		}
+}
+
+```
+> 提交上来的数据是没有带id的，需要手动创建一个隐藏的输入框，再里面给定id的值，使提交上来的表单带上id
+
+4.跳转页面，调用StudentListServlet显示列表
+
