--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -378,35 +378,6 @@ list.jsp
 		}
 	}
 ```
-```java
-	public class EditStudentServlet extends HttpServlet {
-		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-
-			try {
-				//1.获取待修改的学生id
-				int sid = Integer.parseInt(request.getParameter("sid"));
-
-				//2.根据id获取学生对象
-				StudentService service = new StudentServiceImpl();
-				Student student = service.findStudentById(sid);
-
-				//3，显示数据
-				//存数据
-				request.setAttribute("student", student);
-				//跳转页面
-				request.getRequestDispatcher("edit.jsp").forward(request, response);;
-
-
-			} catch (SQLException e) {
-				e.printStackTrace();
-			}
-		}
-
-		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {		
-			doGet(request, response);
-		}
-	}
-```
 2.跳转到更新的页面，然后再页面上显示数据
 ```jsp
 edit.jsp
@@ -535,3 +506,222 @@ edit.jsp
 
 4.跳转页面，调用StudentListServlet显示列表
 
+## 模糊查询
+```jsp
+	<td colspan="8">
+		按姓名查询:<input type="text" name="sname"/> &nbsp; &nbsp; &nbsp; &nbsp;
+		按性别查询:<select name="gender">
+				option value="" >--请选择--
+				<option value="男">男
+				<option value="女">女
+			</select>&nbsp; &nbsp; &nbsp; &nbsp;
+			<input type="submit" value="查询"> &nbsp; &nbsp; &nbsp; &nbsp;
+			<a href="add.jsp">添加</a> &nbsp; &nbsp; &nbsp; &nbsp;
+	</td>
+```
+```java
+	public interface StudentDao {
+		/**
+		 * 模糊查询，根据姓名或根据性别，或两则兼有
+		 * @param sname
+		 * @param sgender
+		 * @return List<Student> 集合
+		 * @throws SQLException
+		 */
+		List<Student> searchStudent(String sname,String gender) throws SQLException;
+	}
+
+	public class StudentDaoImpl implements StudentDao{ 
+	@Override
+		public List<Student> searchStudent(String sname, String gender) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			//根据传入的具体参数，生成sql语句
+			String sql = "select * from stu where 1=1";
+			List<String> list = new ArrayList<String>();
+
+			if(!textUtil.isEmpty(sname)) {
+				//如果名字不为空
+				sql = sql + " and sname like ?";
+				list.add("%"+sname+"%");
+			}
+			if(!textUtil.isEmpty(gender)) {
+				//如果性别不为空
+				sql = sql + " and gender=?";;
+				list.add(gender);
+			}
+			return runner.query(sql, new BeanListHandler<Student>(Student.class),list.toArray());
+		}
+	}
+
+	public interface StudentService {
+		/**
+		 * 模糊查询
+		 * @param sname
+		 * @param sgender
+		 * @return
+		 */
+		List<Student> searchStudent(String sname,String gender) throws SQLException;
+	}
+
+	public class StudentServiceImpl implements StudentService{
+	@Override
+		public List<Student> searchStudent(String sname, String gender) throws SQLException {
+			StudentDao dao = new StudentDaoImpl();
+			return dao.searchStudent(sname, gender);
+		}
+	}
+
+	public class SearchStudentServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			try {
+				request.setCharacterEncoding("UTF-8");
+
+				//1.渠道要查询的关键数据姓名、性别
+				String sname = request.getParameter("sname");
+				String gender = request.getParameter("gender");
+
+				//2.找service查询
+				StudentService service = new StudentServiceImpl();
+				List<Student> list = service.searchStudent(sname, gender);
+				request.setAttribute("list", list);
+
+				//3.跳转页面
+				request.getRequestDispatcher("list.jsp").forward(request, response);
+
+			} catch (SQLException e) {
+				e.printStackTrace();
+			}
+		}
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			doGet(request, response);
+		}
+	}
+
+```
+## 分页查询
+```jsp
+list_page
+
+	<td colspan="8">
+		第${pageBean.currentPage } /${pageBean.totalPage } 页&nbsp; &nbsp; &nbsp; &nbsp;
+		每页显示${pageBean.pageSize } 条&nbsp; &nbsp; &nbsp; &nbsp;
+		总的记录数${pageBean.totalSize }&nbsp; &nbsp; &nbsp; &nbsp;
+		<c:if test="${pageBean.currentPage != 1 }">
+			<a href="StudentListPageServlet?currentPage=1">首页</a>
+			<a href="StudentListPageServlet?currentPage=${pageBean.currentPage - 1 }">上一页</a>			
+		</c:if>
+
+		<c:forEach begin="1" end="${pageBean.totalPage }" var="i">
+			<c:if test="${pageBean.currentPage == i }">${i }</c:if>
+			<c:if test="${pageBean.currentPage != i }">
+				<a href="StudentListPageServlet?currentPage=${i }">${i }</a>
+			</c:if>
+		</c:forEach>
+
+			<c:if test="${pageBean.currentPage != pageBean.totalPage }">
+				<a href="StudentListPageServlet?currentPage=${pageBean.currentPage + 1 }">下一页</a>
+				<a href="StudentListPageServlet?currentPage=${pageBean.totalPage }">尾页</a>
+			</c:if>
+	</td>
+```
+```java
+	public interface StudentDao {
+		static int PAGE_SIZE = 3;//一页显示多少条记录
+
+		/**
+		 * 查询当页的学生数据
+		 * @param currentPage
+		 * @return List<Student> 集合
+		 * @throws SQLException
+		 */
+		List<Student> findStudentByPage(int currentPage) throws SQLException;
+
+		/**
+		 * 查询总的记录数
+		 * @return 总记录数
+		 * @throws SQLException
+		 */
+		int findCount() throws SQLException;
+	}
+
+	public class StudentDaoImpl implements StudentDao{ 
+	@Override
+		public List<Student> findStudentByPage(int currentPage) throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			//第一个问好代表返回多少条记录，第二个问好，代表跳过前面的多少条记录
+			return runner.query("select * from stu limit ? offset ?",new BeanListHandler<Student>(Student.class),PAGE_SIZE,(currentPage - 1)*PAGE_SIZE);
+		}
+
+		@Override
+		public int findCount() throws SQLException {
+			QueryRunner runner = new QueryRunner(JDBCUtil.getDataSource());
+			//ScalarHandler : 用于处理平均数，总的个数等
+			Long result =  (Long) runner.query("select count(*) from stu",new ScalarHandler());
+			return result.intValue();
+		}	
+	}
+
+	public interface StudentService {
+	/**
+		 * 查询当页的数据
+		 * @param currentPage
+		 * @return List<Student> 集合
+		 * @throws SQLException
+		 */
+		PageBean findStudentByPage(int currentPage) throws SQLException;
+
+	}
+
+	public class StudentServiceImpl implements StudentService{
+	@Override
+		public PageBean findStudentByPage(int currentPage) throws SQLException {
+			//封装分页的该页数据
+			PageBean<Student> pageBean = new PageBean<Student>();
+
+			int pageSize = StudentDao.PAGE_SIZE;
+			pageBean.setCurrentPage(currentPage);
+			pageBean.setPageSize(StudentDao.PAGE_SIZE);
+
+			//获取当前页学生信息集合
+			StudentDao dao = new StudentDaoImpl();
+			List<Student> list = dao.findStudentByPage(currentPage);
+			pageBean.setList(list);
+
+			//总的记录数，总的页数
+			int count = dao.findCount();
+			pageBean.setTotalSize(count);
+			pageBean.setTotalPage(count % pageSize == 0 ? count / pageSize : (count / pageSize) + 1);
+
+			return pageBean;
+		}		 
+	}
+
+	public class StudentListPageServlet extends HttpServlet {
+		protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+
+
+			try {
+
+				//1.获取需要显示的页码数
+				int currentPage = Integer.parseInt(request.getParameter("currentPage"));
+
+				//2。根据页码数，获取页面的数据
+				StudentService service = new StudentServiceImpl();
+				PageBean pageBean = service.findStudentByPage(currentPage);			
+				request.setAttribute("pageBean", pageBean);
+
+				//3.跳转页面
+				request.getRequestDispatcher("list_page.jsp").forward(request, response);
+
+			} catch (SQLException e) {
+				e.printStackTrace();
+			}
+		}
+
+
+		protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
+			doGet(request, response);
+		}
+	}
+```
