--- a/Javaweb/8.学生信息查询系统.md
+++ b/Javaweb/8.学生信息查询系统.md
@@ -307,7 +307,7 @@ list.jsp
 	}
 ```
 ## 更新
-1.点击列表上的更新，先跳转到一个EditStudentServlet,查询该学生的所有信息
+* 1.点击列表上的更新，先跳转到一个EditStudentServlet,查询该学生的所有信息
 ```jsp
 list.jsp
 
@@ -378,7 +378,7 @@ list.jsp
 		}
 	}
 ```
-2.跳转到更新的页面，然后再页面上显示数据
+* 2.跳转到更新的页面，然后再页面上显示数据
 ```jsp
 edit.jsp
 
@@ -418,7 +418,7 @@ edit.jsp
 		</td>
 	</tr>
 ```
-3.修改完毕后，提交数据到UpdateServlet,获取数据，调用servlet，调用dao
+* 3.修改完毕后，提交数据到UpdateServlet,获取数据，调用servlet，调用dao
 ```java
 	public interface StudentDao {
 		/**
