--- a/Javaweb/1.xml.md
+++ b/Javaweb/1.xml.md
@@ -58,7 +58,7 @@
 * 简单元素
 > 元素里面包含了普通的文字
 * 复杂元素
-> 元素里面还可以潜逃其他的元素
+> 元素里面还可以嵌套其他的元素
 
 ### 5.属性的定义
 > 定义在元素里面，<元素名称  属性名称=“属性的值”><元素名称/>
@@ -81,7 +81,7 @@
  ## CDATA区
  * 非法字符
  ```
-    严格的讲，在xml中仅有字符“<”和“&”是非法的。可jiang3其替换为实体引用
+    严格的讲，在xml中仅有字符“<”和“&”是非法的。可将其替换为实体引用
     <  &lt
     &  &amp
  ```
